syntax = "proto3";
import "google/protobuf/empty.proto";
package gateway;

service Gateway {

    rpc NodeList(google.protobuf.Empty) returns (NodesOverviewResponse);


    rpc NodeDetail(NodeId) returns (NodeDetailResponse);


    rpc MessageDetail(MessageId) returns (MessageDetailResponse);
}

//message NeighborNodes {
//    repeated string neighbor_node_ids = 1;
//}

message Node {
    string node_id = 1;
    repeated string neighbor_nodes = 2;
    bool is_alive = 3;
}

message NodesOverviewResponse {
    repeated Node nodes =1;
    uint32 total_node_count =2;
    uint32 total_message_count =3;
}


message NodeId {
    string node_id = 1;
}

message MessageInfo {
    string message_id = 1;
    string from_addr = 2;
    string to_addr = 3;
}

message NodeDetailResponse {
    string node_id = 1;
    bool is_alive = 2;
    map<string ,int32 > clock =3;
    repeated MessageInfo message_list = 4;
}

message MessageId {
    string message_id = 1;
}

message MessageDetailResponse {
    string message_id = 1;
    map<string ,int32 > clock = 2;
    int32 event_count = 3;
    bool is_zk = 4;
    string from_addr = 5;
    string to_addr = 6;
    string raw_message = 7;
    string signature = 8;
}